2021-07-12  David Turner  <david@freetype.org>

	Remove experimental auto-hinting 'warp' mode.

	This feature was always experimental, and probably nevery worked
	properly. This patch completely removes it from the source code,
	except for a documentation block describing it for historical
	purpose.

	* devel/ftoption.h: Remove AF_CONFIG_OPTION_USE_WARPER.
	* include/freetype/config/ftoption.h: Remove AF_CONFIG_OPTION_USE_WARPER.
	* include/freetype/ftdriver.h: Document 'warping' property as obsolete.
	* src/autofit/*: Remove any warp mode related code.

2021-07-12  David Turner  <david@freetype.org>

	Remove experimental "Latin2" writing system (FT_OPTION_AUTOFIT2)

	This code has always been experimental and was never compiled anyway
	(FT_OPTION_AUTOFIT2 does not appear in ftoption.h or even any of our
	build files).

	* include/freetype/internal/fttrace.h: Remove 'FT_TRACE_DEF( aflatin2 )'.
	* src/autofit/aflatin2.[hc]: Removed.
	* src/autofit/afloader.c: Remove undocumented hook to activate Latin2 system.
	* src/autofit/afstyles.h: Remove ltn2_dflt style definition.
	* src/autofit/afwrtsys.h: Remove LATIN2 writing system definition.
	* src/autofit/autofit.c: Updated.

2021-07-05  Werner Lemberg  <wl@gnu.org>

	* src/base/ftlcdfil.c (FT_Library_SetLcdGeometry): Fix argument.

	Reported by Hin-Tak.

2021-07-03  Werner Lemberg  <wl@gnu.org>

	* meson_options.txt: Sort alphabetically; no final full stops.

2021-07-01  Ben Wagner  <bungeman@chromium.org>

	* src/truetype/ttgxvar.c (tt_set_mm_blend): Test `coords`.

	It is undefined behavior to pass `NULL` to `memcpy`.  `coords' is
	passed to `memcpy` but `TT_Get_MM_Blend` and `TT_Get_Var_Design`
	explictly call `tt_set_mm_blend` with `coords` as `NULL`.  In
	addition, `TT_Set_MM_Blend` has a similar possible issue.

2021-06-30  Dominik Röttsches  <drott@chromium.org>

	[sfnt] Support PaintScale in 'COLR' v1 parsing.

	* include/freetype/ftcolor.h (FT_PaintFormat): Renumber values, add
	`FT_COLR_PAINTFORMAT_SCALE`.